templates/gradiary-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gradiary
  labels:
    app: api-gradiary
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080

  selector:
    app: api-gradiary
